test_suite/tests/ui/malformed/cut_off.rs
use serde_derive::Serialize;

#[derive(Serialize)]
#[serde(rename =)]
struct S;

fn main() {}
